crates/ridge-parser/tests/fixtures/errors/p013_deferred_class.ridge
-- expect: P030
-- Trigger: a `class` declaration with no method body produces P030.
class Eq a =
